packages/ui-library/src/css/mixins.scss
/* ... */
@mixin flexbox {
	/* stylelint-disable */
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: flex;
	/* stylelint-enable */
}

@mixin flexbox-grow($value) {
    -webkit-box-flex: $value;
    -webkit-flex-grow: $value;
    -moz-flex-grow: $value;
    -ms-flex-positive: $value;
    flex-grow: $value;
}

// STYLING ----------------------------------------------------------------------------------------

@mixin inactive-link-styles {
    @include transition(transform 0.2s ease-out);
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 2px;
    background-color: $color-active;
    transform: scaleX(0);
    visibility: hidden;
}

@mixin active-link-styles {
    @include transition(transform 0.1s ease-out);
    transform: scaleX(1);
    visibility: visible;
}

@mixin input-style-light {
    background-color: $color-white;
    border: 1px solid $color-strong-neutral-70;
}

@mixin input-background-light {
    background-color: $color-white;
}

@mixin input-background-dark {
    background-color: $color-input-fill;
}

@mixin input-style-base {
    @include input-background-dark;

    color: $color-input-text;
    border: 1px solid $color-input-fill;
    font-size: 14px;

    &::placeholder {
        font-style: italic;
        opacity: 0.4;
    }
}

@mixin input-style {
    @include input-style-base;

    .modifier_light-inputs & {
        @include input-style-light;
    }

    .modifier_light-inputs .modifier_dark-inputs & {
        @include input-style-base;
    }
}

@mixin input-background {
    background-color: $color-input-fill;

    .modifier_light-inputs & {
        @include input-background-light;
    }

    .modifier_light-inputs .modifier_dark-inputs & {
        @include input-background-dark;
    }
}

@mixin style-inputs-light {
    .input-textfield input,
    .input-textarea textarea,
    .input-multivalues .entries {
        @include input-background-light;
        @include input-style-light;
    }
}


// TEXT -------------------------------------------------------------------------------------------

@mixin text-truncate {
    overflow: hidden;
    text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
    -ms-text-overflow: ellipsis;
    white-space: nowrap;
}

@mixin text-size-adjust($tsa) {
    -moz-text-size-adjust: $tsa;
    -webkit-text-size-adjust: $tsa;
    -ms-text-size-adjust: $tsa;
}

@mixin placeholder-css($color, $font-weight, $padding-top, $font-style: italic) {
    ::-webkit-input-placeholder {
        color: $color;
        font-weight: $font-weight;
        padding: $padding-top 0 0;
        font-style: $font-style;
    }
    :-moz-placeholder { // Firefox 18-
        color: $color;
        font-weight: $font-weight;
        padding: $padding-top 0 0;
        font-style: $font-style;
    }
    ::-moz-placeholder {  // Firefox 19+
        color: $color;
        font-weight: $font-weight;
        padding: $padding-top 0 0;
        font-style: $font-style;
    }
    :-ms-input-placeholder {
        color: $color;
        font-weight: $font-weight;
        padding: $padding-top 0 0;
        font-style: $font-style;
    }
}


// ANIMATION --------------------------------------------------------------------------------------

@mixin transition($transition) {
    -webkit-transition: $transition;
    -moz-transition: $transition;
    -ms-transition: $transition;
    -o-transition: $transition;
    transition: $transition;
}

@mixin transition-delay($transition-delay) {
    -webkit-transition-delay: $transition-delay;
    -moz-transition-delay: $transition-delay;
    -ms-transition: $transition-delay;
    -o-transition: $transition-delay;
    transition-delay: $transition-delay;
}

@mixin transition-duration($transition-duration) {
    -webkit-transition-duration: $transition-duration;
    -moz-transition-duration: $transition-duration;
    transition-duration: $transition-duration;
}

@mixin transform($transform) {
    -ms-transform: $transform;
    -webkit-transform: $transform;
    transform: $transform;
}

@mixin animation ($animation) {
    -webkit-animation: $animation;
    -moz-animation: $animation;
    -o-animation: $animation;
    animation: $animation;
}

@mixin rotate($degrees) {
    -webkit-transform: rotate($degrees);
    -moz-transform: rotate($degrees);
    -ms-transform: rotate($degrees);
    -o-transform: rotate($degrees);
    transform: rotate($degrees);
}

@mixin keyframes($animation-name) {
    @-webkit-keyframes #{$animation-name} {
        @content;
    }

    @-moz-keyframes #{$animation-name} {
        @content;
    }

    @keyframes #{$animation-name} {
        @content;
    }
}

@mixin fadein-keyframes {
    @include keyframes('fade-in') {
        0% {
            opacity: 0;
        }
        100% {
            opacity: 1;
        }
    }
}

@include fadein-keyframes; // animation keyframes only need to be declared once and then can be used globally

@mixin slidedown-keyframes {
    @include keyframes('slide-down') {
        0% {
            transform: translateY(-100%);
        }
        100% {
            opacity: translateY(-100%);
        }
    }
}

@include slidedown-keyframes;


// NUMERIC -----------------------------------------------------------------------------------------

// Power function : @param {Number} $x, @param {Number} $n, @return {Number}
@function pow($x, $n) {
    /* stylelint-disable */
    $ret: 1;
    @if $n >= 0 {
        @for $i from 1 through $n {
            $ret: $ret * $x;
        }
    } @else {
        @for $i from $n to 0 {
            $ret: $ret / $x;
        }
    }
    @return $ret;
    /* stylelint-enable */
}
/* ... */

